[gd_scene load_steps=16 format=3 uid="uid://b2qjpqumrpfit"]

[ext_resource type="Script" path="res://scenes/coin/coin.gd" id="1_5r3ev"]
[ext_resource type="Texture2D" uid="uid://y3jarereh7ly" path="res://assets/coin/tile_0151.png" id="1_odujf"]
[ext_resource type="PackedScene" uid="uid://b33ywo0ok0eet" path="res://scenes/util/random_audio_stream_player.tscn" id="2_c88q7"]
[ext_resource type="Texture2D" uid="uid://h26ept5gsbci" path="res://assets/coin/tile_0152.png" id="2_dthh7"]
[ext_resource type="AudioStream" uid="uid://y66nhr1ki3ir" path="res://assets/sounds/other sounds/glass_004.ogg" id="3_7q4n2"]
[ext_resource type="AudioStream" uid="uid://i68ilhmp637y" path="res://assets/sounds/impactGlass_heavy_000.ogg" id="4_5al6i"]
[ext_resource type="AudioStream" uid="uid://b865hkrguapvi" path="res://assets/sounds/impactGlass_heavy_001.ogg" id="5_jwie3"]
[ext_resource type="AudioStream" uid="uid://b8d13fvbi4xoj" path="res://assets/sounds/impactGlass_heavy_002.ogg" id="6_j7524"]
[ext_resource type="AudioStream" uid="uid://dep2rrkbaosvw" path="res://assets/sounds/impactGlass_heavy_003.ogg" id="7_hxd6e"]
[ext_resource type="AudioStream" uid="uid://cbnvo43i445l0" path="res://assets/sounds/impactGlass_heavy_004.ogg" id="8_nryid"]

[sub_resource type="Animation" id="Animation_7hjsf"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_iau8x"]
resource_name = "pickup"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -16), Vector2(0, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3e5ol"]
_data = {
"idle": SubResource("Animation_7hjsf"),
"pickup": SubResource("Animation_iau8x")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_uegvl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ty7ia"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_odujf")
}, {
"duration": 1.0,
"texture": ExtResource("2_dthh7")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[node name="Coin" type="Node2D" groups=["coin"]]
script = ExtResource("1_5r3ev")

[node name="RandomAudioStreamPlayer" parent="." instance=ExtResource("2_c88q7")]
number_to_play = 1
min_pitch_scale = 0.8
max_pitch_scale = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer"]
stream = ExtResource("3_7q4n2")
volume_db = -15.0
bus = &"SFX"

[node name="RandomAudioStreamPlayer2" parent="." instance=ExtResource("2_c88q7")]
number_to_play = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer2"]
stream = ExtResource("4_5al6i")
volume_db = -30.0
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer2"]
stream = ExtResource("5_jwie3")
volume_db = -30.0
bus = &"SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer2"]
stream = ExtResource("6_j7524")
volume_db = -30.0
bus = &"SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer2"]
stream = ExtResource("7_hxd6e")
volume_db = -30.0
bus = &"SFX"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer2"]
stream = ExtResource("8_nryid")
volume_db = -30.0
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_3e5ol")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_uegvl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ty7ia")
autoplay = "default"
frame_progress = 0.114195

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
